Added base preview UI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tiny It</title>
+    <meta property="og:title" content="Tiny It - Shorten Your Links" />
+    <meta property="og:description" content="A minimalist link shortener" />
+    <meta property="og:image" content="https://tiny.oneiro.dev/logo.png" />
+    <meta property="og:url" content="https://tiny.oneiro.dev" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
